k8s/chartviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chartviewer
  namespace: chartviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chartviewer
  template:
    metadata:
      labels:
        app: chartviewer
    spec:
      containers:
        - name: chartviewer
          image: chartviewer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
