k8s/chartviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartviewer
  namespace: chartviewer
spec:
  selector:
    app: chartviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
