k8s/chartviewer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chartviewer-ingress
  namespace: chartviewer
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: chartviewer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chartviewer
                port:
                  number: 80
